update masthead partial

--- a/assets/css/sass/blocks/_masthead.scss
+++ b/assets/css/sass/blocks/_masthead.scss
@@ -1,7 +1,9 @@
 .masthead {
-    position: -webkit-sticky;
-    position: sticky; // locally testing intended behaviour; unsupported in ie, edge
-    top: $leading * 3;
+    &.is-sticky {
+        position: -webkit-sticky;
+        position: sticky; // locally testing intended behaviour; unsupported in ie, edge
+        top: $leading * 3;
+    }
     @extend .u-mb-2;
     @include media($md) {
         margin-bottom: 0;
