--- a/assets/css/sass/views/_single-team-member.scss
+++ b/assets/css/sass/views/_single-team-member.scss
@@ -10,7 +10,7 @@
 
 .member-meta {
     @include media($lg) {
-        border-left: 2px solid black;
+        border-left: $border-width solid black;
         padding-left: $leading;
         margin-left: flex-grid(2, $grid-columns);
     }
