--- a/assets/css/sass/shared/utility/_colors.scss
+++ b/assets/css/sass/shared/utility/_colors.scss
@@ -7,7 +7,7 @@
 	}
 
 	.u-color-hover-#{$color-name} {
-		&:hover { color: $hex !important; }
+		&:hover, &:focus { color: $hex !important; }
 	}
     
     .u-bg-#{$color-name} {
