--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -956,6 +956,10 @@ hr {
 .u-width-12 {
   width: 100%; }
 
+@media screen and (min-width: 768px) {
+  .u-width-8-10 {
+    width: 79.43%; } }
+
 [class*="u-span-"]:last-child {
   margin-right: 0; }
 
@@ -1078,7 +1082,7 @@ hr {
 .u-pl-1 {
   padding-left: 1rem; }
 
-.u-px-1, .menu, .menu-ui {
+.u-px-1, .menu {
   padding-left: 1rem;
   padding-right: 1rem; }
 
@@ -1312,7 +1316,7 @@ hr {
   padding-left: 6rem;
   padding-right: 6rem; }
 
-.u-py-6, .module {
+.u-py-6 {
   padding-top: 6rem;
   padding-bottom: 6rem; }
 
@@ -1617,9 +1621,11 @@ figure {
   @media screen and (min-width: 768px) {
     .menu-ui {
       border: 0;
-      position: absolute;
-      top: 0;
-      left: 0; } }
+      position: fixed;
+      top: 3rem;
+      left: auto;
+      margin-left: calc(-1.75rem + -2.36%);
+      z-index: 1000; } }
 
 .menu-icon {
   width: 32px;
@@ -1681,37 +1687,6 @@ figure {
       -o-transform: rotate(-225deg);
       transform: rotate(-225deg);
       bottom: 13px; }
-
-.section:last-of-type .module:not(.module--quote) {
-  padding-bottom: 0; }
-
-.module--basic {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-lines: multiple;
-  -moz-box-lines: multiple;
-  box-lines: multiple;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-
-.module--basic .module__title {
-  flex: 0 1 100%; }
-
-.module--basic .module__content {
-  flex: 0 0 65.88%; }
-
-.module__content.module__content--full {
-  flex: 0 1 100%; }
-
-.module--basic .module__aside {
-  flex: 0 0 31.76%; }
 
 .page-numbers {
   color: #999999; }
