--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -33,6 +33,7 @@
     "shared/utility/typography";
 
 @import
+    "blocks/badge",
     "blocks/buttons",
     "blocks/filters",
     "blocks/forms",
@@ -52,6 +53,7 @@
     "views/content",
     "views/footer",
     "views/header",
+    "views/home",
     "views/single-project-timeline",
     "views/single-project",
     "views/single-team-member";
