--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,7 +309,7 @@ h1, .h1 {
     h1, .h1 {
       font-size: 4.38rem; } }
 
-h2, blockquote, .h2 {
+h2, blockquote, .h2, .primary-menu .menu-item {
   font-family: "GT-America-Extended-Black", Arial, sans-serif;
   text-transform: uppercase;
   margin-top: 1rem;
@@ -317,10 +317,10 @@ h2, blockquote, .h2 {
   font-size: 2.12rem;
   line-height: 1; }
   @media screen and (min-width: 768px) {
-    h2, blockquote, .h2 {
+    h2, blockquote, .h2, .primary-menu .menu-item {
       font-size: 3rem; } }
 
-h3, .h3, .primary-menu .menu-item {
+h3, .h3 {
   font-family: "GT-America-Extended-Black", Arial, sans-serif;
   text-transform: uppercase;
   margin-top: 1rem;
@@ -328,7 +328,7 @@ h3, .h3, .primary-menu .menu-item {
   font-size: 2rem;
   line-height: 1.125em; }
   @media screen and (min-width: 768px) {
-    h3, .h3, .primary-menu .menu-item {
+    h3, .h3 {
       font-size: 2.25rem; } }
 
 h4, .h4 {
@@ -957,6 +957,10 @@ hr {
   width: 100%; }
 
 @media screen and (min-width: 768px) {
+  .u-width-6-10 {
+    width: 58.86%; } }
+
+@media screen and (min-width: 768px) {
   .u-width-8-10 {
     width: 79.43%; } }
 
@@ -1357,6 +1361,38 @@ hr {
 .u-text-right {
   text-align: right; }
 
+.badge {
+  display: block;
+  position: relative;
+  background: #000;
+  color: #fff;
+  border-radius: 50%;
+  width: 10rem;
+  height: 10rem;
+  text-align: center;
+  font-family: "GT-America-Extended-Black", Arial, sans-serif;
+  line-height: 1;
+  text-transform: uppercase; }
+  .badge:hover, .badge:focus {
+    background: #3266cc;
+    color: white; }
+  @media screen and (min-width: 1000px) {
+    .badge {
+      position: absolute;
+      top: -1.88rem;
+      right: 2.5rem; } }
+
+.badge-text {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  padding: 0 0.5rem;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%); }
+
 .button {
   border: 0;
   border-radius: 0;
@@ -1615,6 +1651,33 @@ figure {
   @media screen and (min-width: 768px) {
     .primary-menu {
       margin-top: -0.3rem; } }
+
+.home .menu-item.blue a:hover {
+  color: #3266cc; }
+
+.home .menu-item.green a:hover {
+  color: #afbd32; }
+
+.home .menu-item.orange a:hover {
+  color: #feac00; }
+
+.home .menu-item.purple a:hover {
+  color: #795acf; }
+
+.home .menu-item.red a:hover {
+  color: #ff685d; }
+
+.home .menu-item.teal a:hover {
+  color: #21b07a; }
+
+.home .menu-item.black a:hover {
+  color: black; }
+
+.home .menu-item.dark-gray a:hover {
+  color: #202022; }
+
+.home .menu-item.white a:hover {
+  color: white; }
 
 .menu-ui {
   border-left: 2px solid white; }
@@ -2174,6 +2237,9 @@ caption {
 .site-menu-content {
   min-height: 100%;
   height: 100%; }
+
+.home .featured-post {
+  position: relative; }
 
 @media screen and (min-width: 1000px) {
   .project-timeline__contents {
