--- a/assets/css/sass/shared/utility/_grid.scss
+++ b/assets/css/sass/shared/utility/_grid.scss
@@ -47,11 +47,28 @@
     }
 
     .u-width-#{$i} {
-        width: flex-grid( $i, $grid-columns );
+        @include media($md) {
+            width: flex-grid( $i, $grid-columns );
+        }
     }
 
 }
 
+.u-span-4-10 {
+    @include media($md) {
+        @include span-columns(4 of 10);
+    }
+}
+.u-width-4-10 {
+    @include media($md) {
+        width: flex-grid(4, 10);
+    }
+}
+.u-span-6-10 {
+    @include media($md) {
+        @include span-columns(6 of 10);
+    }
+}
 .u-width-6-10 {
     @include media($md) {
         width: flex-grid(6, 10);
@@ -60,6 +77,17 @@
 .u-width-8-10 {
     @include media($md) {
         width: flex-grid(8, 10);
+    }
+}
+
+.u-shift-1 {
+    @include media($md) {
+        @include shift(1);
+    }
+}
+.u-shift-2 {
+    @include media($md) {
+        @include shift(2);
     }
 }
 
