build featured event with playable video

--- a/assets/css/sass/blocks/_badge.scss
+++ b/assets/css/sass/blocks/_badge.scss
@@ -13,12 +13,19 @@
     &:hover, &:focus {
         background: $blue;
         color: white;
+        opacity: 1 !important;
     }
 
     @include media($lg) {
         position: absolute;
+        z-index: 1;
         top: rem(-30);
         right: rem(40);
+        &.is-displaced {
+            right: -12rem;
+            @include transform( scale(0.7) );
+            opacity: 0.3;
+        }
     }
 }
 
