--- a/assets/css/sass/blocks/_media.scss
+++ b/assets/css/sass/blocks/_media.scss
@@ -58,3 +58,45 @@ figure {
 		z-index: 1;
 	}
 }
+
+.hsc-video {
+	@extend [class*="responsive-media-"];
+	@extend [class*="responsive-media-"][class*="16x9"];
+	position: relative;
+	cursor: pointer;
+	&.video--preload:after {
+		content: "";
+		display: block;
+		position: absolute;
+		z-index: 1;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(0,0,0,0.2);
+		@include transition( all 300ms ease-out );
+	}
+	&.video--preload:hover {
+		&:after {
+			background: rgba(0,0,0,0.4);
+		}
+	}
+}
+
+.hsc-video__play {
+	position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    @include transform( translateX(-50%) translateY(-50%) );
+	@include transition( all 300ms ease-out );
+	.hsc-video:hover &, &:hover {
+		svg {
+			@include transform(scale(1.2));
+		}
+	}
+
+	svg {
+		@include transition( all 300ms ease-out );
+	}
+}
