--- a/assets/css/sass/blocks/_forms.scss
+++ b/assets/css/sass/blocks/_forms.scss
@@ -22,6 +22,7 @@ label {
     border: 0;
     border-bottom: 2px solid transparent;
     border-radius: 0;
+    background-color: transparent;
     box-sizing: border-box;
     padding: 0;
     @extend .u-pt-1;
