--- a/assets/css/sass/views/_footer.scss
+++ b/assets/css/sass/views/_footer.scss
@@ -26,7 +26,7 @@
     a {
         color: white;
         &:hover, &:focus {
-            color: black;
+            color: black !important;
         }
     }
 }
