--- a/assets/css/sass/blocks/_masthead.scss
+++ b/assets/css/sass/blocks/_masthead.scss
@@ -1,7 +1,7 @@
 .masthead {
     &.is-sticky {
         position: -webkit-sticky;
-        position: sticky; // locally testing intended behaviour; unsupported in ie, edge
+        position: sticky;
         top: $leading * 3;
     }
     @extend .u-mb-2;
