--- a/assets/css/sass/views/_archive-project.scss
+++ b/assets/css/sass/views/_archive-project.scss
@@ -5,7 +5,7 @@
         display: block;
     }
     position: -webkit-sticky;
-    position: sticky; // locally testing intended behaviour; unsupported in ie, edge
+    position: sticky;
     top: 0;
     height: 100vh;
     
