--- a/assets/css/sass/views/_header.scss
+++ b/assets/css/sass/views/_header.scss
@@ -41,6 +41,7 @@
     &[data-background="news"] {
         background-color: $teal;
     }
+    &[data-background="home"],
     &[data-background="contact"] {
         background-color: $blue;
     }
@@ -69,5 +70,5 @@
 .site-menu-content {
     @extend .u-py-2;
     min-height: 100%;
-    height: 100%;
+    // height: 100%;
 }
