--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1822,6 +1822,9 @@ figure {
 .home .menu-item.white a:hover {
   color: white; }
 
+.home .menu-item.home-link {
+  display: none; }
+
 .menu-ui {
   border-left: 1px solid black;
   padding-left: 2.36%; }
@@ -2377,7 +2380,7 @@ caption {
     background-color: #feac00; }
   .site-menu[data-background="news"] {
     background-color: #21b07a; }
-  .site-menu[data-background="contact"] {
+  .site-menu[data-background="home"], .site-menu[data-background="contact"] {
     background-color: #3266cc; }
   .site-menu .flex__item {
     border-color: white; }
@@ -2396,8 +2399,7 @@ caption {
       -ms-flex-preferred-size: 50%; } }
 
 .site-menu-content {
-  min-height: 100%;
-  height: 100%; }
+  min-height: 100%; }
 
 .home .featured-post {
   position: relative; }
