--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -677,7 +677,7 @@ hr {
 .u-overflow-hidden {
   overflow: hidden; }
 
-.u-transition-300, .site-menu {
+.u-transition-300 {
   -webkit-transition: all 300ms ease-out;
   -moz-transition: all 300ms ease-out;
   transition: all 300ms ease-out; }
@@ -1856,9 +1856,9 @@ figure {
   display: block;
   position: absolute;
   left: 0;
-  -webkit-transition: all 300ms ease-out;
-  -moz-transition: all 300ms ease-out;
-  transition: all 300ms ease-out; }
+  -webkit-transition: all 200ms ease-out;
+  -moz-transition: all 200ms ease-out;
+  transition: all 200ms ease-out; }
   .has-open-menu .menu-icon__bar {
     background-color: white; }
   .menu-icon__bar.top {
@@ -1877,10 +1877,7 @@ figure {
       top: 10px; }
   .menu-icon__bar.middle {
     top: 50%;
-    margin-top: -2px;
-    -webkit-transition-delay: 300ms;
-    -moz-transition-delay: 300ms;
-    transition-delay: 300ms; }
+    margin-top: -2px; }
     .has-open-menu .menu-icon__bar.middle {
       opacity: 0;
       -webkit-transform: translateX(-16px);
@@ -2361,9 +2358,9 @@ caption {
   pointer-events: none;
   background-color: black;
   color: white;
-  -webkit-transition: opacity 600ms ease-out, background 300ms ease-out;
-  -moz-transition: opacity 600ms ease-out, background 300ms ease-out;
-  transition: opacity 600ms ease-out, background 300ms ease-out; }
+  -webkit-transition: opacity 500ms ease-out, background 200ms ease-out;
+  -moz-transition: opacity 500ms ease-out, background 200ms ease-out;
+  transition: opacity 500ms ease-out, background 200ms ease-out; }
   .site-menu a {
     color: white; }
     .site-menu a:hover, .site-menu a:focus {
